# rust-mysql-binlog

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
examples/: print_file.rs
src/: binlog_file.rs  bit_set.rs  column_types.rs  errors.rs  event.rs  jsonb.rs  lib.rs  packet_helpers.rs  table_map.rs  tell.rs  value.rs
test_data/: bin-log.000001
