[package]
name = "mysql_binlog"
version = "0.2.0"
authors = ["James Brown <jbrown@easypost.com>"]
description = "Parser for the MySQL binlog format"
documentation = "https://docs.rs/mysql_binlog"
homepage = "https://github.com/EasyPost/rust-mysql-binlog"
repository = "https://github.com/EasyPost/rust-mysql-binlog"
license = "ISC"
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1"
uuid = "0.6"
base64 = "0.10"
failure = "0.1"
serde_json = "1"
serde = "1"
serde_derive = "1"
bigdecimal = { version="^0.0.15", features=["serde"] }

[dev-dependencies]
assert_matches = "1"
