[package]
name = "mysql_binlog"
version = "0.3.2"
authors = ["James Brown <jbrown@easypost.com>"]
description = "Parser for the MySQL binlog format"
documentation = "https://docs.rs/mysql_binlog"
homepage = "https://github.com/EasyPost/rust-mysql-binlog"
repository = "https://github.com/EasyPost/rust-mysql-binlog"
license = "ISC"
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1"
uuid = "0.8"
base64 = "0.13"
thiserror = "1.0"
serde_json = "1"
serde = {version = "1", features=["derive"] }
bigdecimal = { version="^0.3.0", features=["serde"] }

[dev-dependencies]
assert_matches = "1"
